# ur5_ros_gym

./: README.md
rl_unscrew/: README.md  requirements.txt
rl_unscrew/rl-gym/: pythom3_test.py  simple_loop.py
rl_unscrew/rl-gym/ppo/: PPOAgent.py  PPOEnv.py  PPOMain.py  test.py
rl_unscrew/rl-gym/rl_gym/: __init__.py
rl_unscrew/rl-gym/rl_gym/envs/: unscrewing_env.py
rl_unscrew/rl_moveit_config/config/: joint_limits.yaml
total_moveit_config/launch/: planning_context.launch
universal_robot/ur_driver/: .test_move.py.swp
universal_robot/ur_robotiq_gripper_description/: CMakeLists.txt  package.xml
universal_robot/ur_robotiq_gripper_description/launch/: ur5_robotiq_upload.launch  ur_gazebo.launch
universal_robot/ur_robotiq_gripper_description/urdf/: ur5.urdf.xacro  ur5_joint_limited_gripper.urdf.xacro
