<?xml version="1.0"?>
<package format="2">
  <name>ur_robotiq_gripper_description</name>
  <version>1.2.5</version>
  <description>
      URDF description for Universal UR5 with robotiq 2f gripper
  </description>

  <author>Geonhee-LEE</author>
  <maintainer email="gunhee6392@gmail.com">Geonhee</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
